--- a/index.html
+++ b/index.html
@@ -2,49 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Чего вы ждете от хэллоуина</title>
+    <title>2020 Что вы ожидаете от Хеллоуина</title>
     <link rel="stylesheet" href="main.css">
+    <script type="text/javascript" src="index.js"></script>
 </head>
-<body>
+<body id="body">
 <header id="header" class="header">
-    <img class="header__main-image" src="omskit.jpg" alt="main image">
+    <img class="header__main-image" src="4.jpg" alt="main image">
 </header>
 <main id="main" class="main">
     <div class="form">
-        <p class="form__title">Тестовая форма</p>
-        <p class="form__description">Какое-то описание</p>
+        <p class="form__title">Что вы ожидаете от Хеллоуина?</p>
+        <p class="form__description">Мы решили собрать немного информации о том, чтобы вы хотели увидеть на Хеллоуине. Так мы поймем, насколько хорошо вас знаем.</p>
         <div class="form__fields-wrapper">
             <div class="form__input-wrapper">
                 <label class="form__label label-required" for="field 1">
-                    Имя
+                    E-mail
                 </label>
                 <div class="form__input-block">
-                    <input class="form__input" id="field 1">
+                    <input class="form__input" id="field 1" placeholder="Укажите рабочий" onchange="onInputFocusOut()">
                 </div>
             </div>
             <div class="form__input-wrapper">
                 <label class="form__label label-required" for="field 2">
-                    Фамилия
+                    Имя
                 </label>
                 <div class="form__input-block">
-                    <input class="form__input" id="field 2">
+                    <input class="form__input" id="field 2" placeholder="На русском языке" onchange="onInputFocusOut()">
                 </div>
             </div>
             <div class="form__input-wrapper">
-                <label class="form__label" for="field 3">
-                    Отчество
+                <label class="form__label label-required" for="field 3">
+                    Фамилия
                 </label>
                 <div class="form__input-block">
-                    <input class="form__input" id="field 3">
+                    <input class="form__input" id="field 3" placeholder="На русском языке" onchange="onInputFocusOut()">
+                </div>
+            </div>
+            <div class="form__input-wrapper">
+                <label class="form__label label-required" for="field 4">
+                    Расскажите, чего вы ожидаете?
+                </label>
+                <div class="form__input-block">
+                    <input class="form__input" id="field 4" onchange="onInputFocusOut()">
                 </div>
             </div>
         </div>
-        <button class="button-submit" id="button">Submit</button>
+        <button class="button-submit" id="button" disabled>Submit</button>
     </div>
 </main>
-<video class="video" id="video" src="./videoplayback.mp4" style="display: none"></video>
+<video class="video" id="video" src="./video.mp4" style="display: none"></video>
 <script type="text/javascript">
     document.getElementById('button').onclick = () => {
+        document.getElementById('body').style.backgroundColor = '#000'
         document.getElementById('main').style.display = 'none';
         document.getElementById('header').style.display = 'none';
         document.getElementById('video').style.display = 'block';
