--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body id="body">
 <header id="header" class="header">
-    <img class="header__main-image" src="4.jpg" alt="main image">
+    <img class="header__main-image" src="./4.jpg" alt="main image">
 </header>
 <main id="main" class="main">
     <div class="form">
