--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <title>2020 Что вы ожидаете от Хеллоуина</title>
     <link rel="stylesheet" href="main.css">
     <script type="text/javascript" src="index.js"></script>
+    <link rel="shortcut icon" href="icon.png" type="image/png">
 </head>
 <body id="body">
 <header id="header" class="header">
-    <img class="header__main-image" src="./4.jpg" alt="main image">
+    <img class="header__main-image" src="main.jpg" alt="main image">
 </header>
 <main id="main" class="main">
     <div class="form">
@@ -20,7 +21,7 @@
                     E-mail
                 </label>
                 <div class="form__input-block">
-                    <input class="form__input" id="field 1" placeholder="Укажите рабочий" onchange="onInputFocusOut()">
+                    <input class="form__input" id="field 1" type="email" placeholder="Укажите рабочий" onchange="onInputFocusOut()">
                 </div>
             </div>
             <div class="form__input-wrapper">
