Changed button text on main form

--- a/main-form.html
+++ b/main-form.html
@@ -41,7 +41,7 @@
             </div>
           </div>
         </div>
-        <button class="button-submit" id="button" disabled>Спасибо!</button>
+        <button class="button-submit" id="button" disabled>Все понятно, спасибо!</button>
       </div>
     </main>
     <video
