Improved main form description

--- a/main-form.html
+++ b/main-form.html
@@ -17,7 +17,7 @@
         <p class="form__description">
           Спасибо! Для вас есть послание, но оно
           зашифровано в анаграмме. Решите-ка ее...
-          Разделяйте слова пробелами.
+          Разделяйте слова пробелами и пишите капсом.
           <img
             class="form__anagram"
             src="./assets/anagram.png"
