--- a/main-form.html
+++ b/main-form.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Чего вы ожидаете от Хеллоуина?</title>
+    <title>Празднуем!</title>
     <link rel="stylesheet" href="./css/main.css" />
     <script type="text/javascript" src="./js/index.js"></script>
     <link rel="shortcut icon" href="./assets/icon.png" type="image/png" />
@@ -13,11 +13,21 @@
     </header>
     <main id="main" class="main">
       <div class="form">
-        <p class="form__title">Чего вы ожидаете от Хеллоуина?</p>
+        <p class="form__title">Праздничное испытаньице...</p>
         <p class="form__description">
-          Спасибо! Для вас есть послание, но оно
-          зашифровано в анаграмме. Решите-ка ее...
+          Спасибо!
+          <br />
+          Для вас есть послание, но оно
+          зашифровано в анаграмме.
+          <br />
+          Решите-ка ее...
+          <br />
+          Порядок слов может быть неверным.
+          <br />
           Разделяйте слова пробелами и пишите капсом.
+          <br />
+          Кнопка станет активна, когда вы введете
+          правильный вариант расшифровки.
           <img
             class="form__anagram"
             src="./assets/anagram.png"
